<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_app">Add to</string>
    <string name="analyse_crc_text1">Is the preset that matches the current phone detected, is it synchronized immediately?</string>
    <string name="analyse_crc_text2">Do not remind again</string>
    <string name="analyse_crc_text3">Download Game</string>
    <string name="analyse_crc_text4">The game is not available on Google Play, please download it from the official website!</string>
    <string name="app_name">ShootingPlus V3</string>
    <string name="app_name1">ShootingPlus</string>
    <string name="app_name2">GamepadPlus</string>
    <string name="app_not_install">App has been uninstalled</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_for_permission">Permission inquiry</string>
    <string name="ble_not_supported">This device doesn</string>
    <string name="bluetoothdevmanager_tip1">Switch to the mode of gun lowering with F4!</string>
    <string name="bluetoothdevmanager_tip2">Switch to the mode of gun lowering with F5!</string>
    <string name="bluetoothdevmanager_tip3">Switch to the mode of gun lowering with F6!</string>
    <string name="bluetoothdevmanager_tip4">Switch to the mode of gun lowering with F7!</string>
    <string name="bluetoothdevmanager_tip5">Cancel the gun lowering!</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bunding_game">Bind to the game simultaneously</string>
    <string name="cancel">Cancel</string>
    <string name="cancle">Cancel</string>
    <string name="change_to_scenes0">Switch to Scene 1</string>
    <string name="change_to_scenes1">Switch to Scene 2</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checking">Checking the new version, please wait…</string>
    <string name="confirm">OK</string>
    <string name="connected">Connected</string>
    <string name="connerror">Device Disconnected</string>
    <string name="connok">Device Connected</string>
    <string name="danger_tip">There is a risk of title in this game. Do you want to confirm whether to continue?</string>
    <string name="define_FloatingActionButton" />
    <string name="delete">Delete</string>
    <string name="device_fw_info">Device Info</string>
    <string name="device_fw_rom_version">Device Rom Ver:</string>
    <string name="device_fw_version">Device Version:</string>
    <string name="device_list">Device list</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="down_updata_app">Update APP</string>
    <string name="download_fw">Download firmware</string>
    <string name="downloaded_fw_info">Downloaded File Info</string>
    <string name="downloaded_fw_rom_version">File Rom Ver:</string>
    <string name="downloaded_fw_version">File Version:</string>
    <string name="enter_reset_device">"Confirm that all custom presets will be lost!
Device presets resume to factory default!
Are you sure to resume the factory settings?"</string>
    <string name="enter_reset_device2">All presets of the device will be overwritten!</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="error_mode_tip1">Device mode error, please switch to the correct mode and re-pair</string>
    <string name="error_mode_tip2">\u0009 Mode switching：</string>
    <string name="error_mode_tip3">\u0009\u0009\u0009 Home+A into Android mode</string>
    <string name="error_mode_tip4">\u0009\u0009\u0009 Home+Y into IOS mode</string>
    <string name="error_mode_tip5">The device is currently in IOS mode. Please unpair and switch to Android mode to re-pair the device.</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="finish_setup">Exit</string>
    <string name="first_page_tip1">No updatable APP detected!</string>
    <string name="first_page_tip10">(The hidden menu can be called up with the F1 or Start key.)</string>
    <string name="first_page_tip11">Standard presets for the games in the following list can be downloaded from the official websites.</string>
    <string name="first_page_tip12">View details</string>
    <string name="first_page_tip13">Manufacturer name:</string>
    <string name="first_page_tip14">Contact:</string>
    <string name="first_page_tip15">Device Details</string>
    <string name="first_page_tip16">Save pictures</string>
    <string name="first_page_tip17">Preview</string>
    <string name="first_page_tip18">Download To Ctrl+F1</string>
    <string name="first_page_tip19">Download To Ctrl+F2</string>
    <string name="first_page_tip2">No updatable firmware detected!</string>
    <string name="first_page_tip20">Download To Ctrl+F3</string>
    <string name="first_page_tip21">Download To Ctrl+F4</string>
    <string name="first_page_tip22">Download To Ctrl+F5</string>
    <string name="first_page_tip23">Download To Home+Up</string>
    <string name="first_page_tip23_1">Download Preset</string>
    <string name="first_page_tip24">Download To Home+Right</string>
    <string name="gun_setup_tip1">F3 call out/close the gun lowering setting interface, Effective gun lowering with F4-F7, ineffective gun lowering with ESC</string>
    <string name="location_list10">Start the game and enter the game operation custom panel to quickly set the preset!</string>
    <string name="location_list11">Do you want to start the game right away?</string>
    <string name="mirrors_four">Gun lowering with F7:</string>
    <string name="mirrors_three">Gun lowering with F6:</string>
    <string name="mirrors_two">Gun lowering with F5:</string>
    <string name="new_33">Touchpad setting</string>
    <string name="new_34">View mode</string>
    <string name="new_35">ABXY model</string>
    <string name="new_op36">Radius setting:</string>
    <string name="new_op37">Radius:</string>
    <string name="new_setup_dialog_tip18">Preset sync</string>
    <string name="new_setup_dialog_tip21">Presets matching the current phone will be loaded from the server and then synced to the current device!</string>
    <string name="new_setup_dialog_tip28">Device Type:</string>
    <string name="new_setup_dialog_tip29">Device model:</string>
    <string name="new_setup_dialog_tip30">Preset solution:</string>
    <string name="new_setup_dialog_tip31">Screen Size:</string>
    <string name="new_setup_dialog_tip32">Upload the official presets</string>
    <string name="new_setup_dialog_tip35">Current Device:</string>
    <string name="new_setup_dialog_tip36">Current Phones:</string>
    <string name="op36">Radius setting:</string>
    <string name="op46">Tips</string>
    <string name="parm_setup">Settings of gun lowering parameters</string>
    <string name="red_dot">Gun lowering with F4:</string>
    <string name="reset_gun_parm">Restore defaults</string>
    <string name="save_dialog_tip1">Save the preset solution to the device now?</string>
    <string name="save_gun_parm">Save</string>
    <string name="sure">OK</string>
</resources>