<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/new_dialog_bg" android:layout_width="320.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_setup_dialog_tip32" />
    <TextView android:background="@color/white" android:layout_width="320.0dip" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_setup_dialog_tip35" />
        <TextView android:textColor="@color/white" android:id="@id/tv_device_info" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="ShootingPlus  Q789" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_setup_dialog_tip36" />
        <TextView android:textColor="@color/white" android:id="@id/tv_phone_info" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="2560x1440" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:background="@color/white" android:layout_width="320.0dip" android:layout_height="1.0dip" />
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_setup_dialog_tip28" />
        <TextView android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/tv_device_type" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:drawableEnd="@mipmap/down_arrow_bg" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_setup_dialog_tip29" />
        <TextView android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/tv_device_model" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:drawableEnd="@mipmap/down_arrow_bg" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_setup_dialog_tip30" />
        <TextView android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/tv_preset_location" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:drawableEnd="@mipmap/down_arrow_bg" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_setup_dialog_tip31" />
        <TextView android:textColor="@color/white" android:id="@id/tv_resolution" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="35.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" />
        <TextView android:layout_gravity="center_vertical" android:background="@color/white" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_sure" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sure" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>