<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg_shape" android:layout_width="320.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:gravity="center" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/parm_setup" />
    <TextView android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:padding="4.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:paddingEnd="12.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/red_dot" />
            <TextView android:id="@id/red_range" android:layout_width="25.0dip" android:layout_height="wrap_content" />
            <SeekBar android:id="@id/red_range_seek_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="40" android:progress="0" android:progressDrawable="@drawable/progress_holo_light" android:thumb="@drawable/sb_ball" android:paddingStart="8.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:paddingEnd="12.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mirrors_two" />
            <TextView android:id="@id/mirrors_two_range" android:layout_width="25.0dip" android:layout_height="wrap_content" />
            <SeekBar android:id="@id/mirrors_two_range_seek_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="40" android:progress="0" android:progressDrawable="@drawable/progress_holo_light" android:thumb="@drawable/sb_ball" android:paddingStart="8.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:paddingEnd="12.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mirrors_three" />
            <TextView android:id="@id/mirrors_three_range" android:layout_width="25.0dip" android:layout_height="wrap_content" />
            <SeekBar android:id="@id/mirrors_three_range_seek_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="40" android:progress="0" android:progressDrawable="@drawable/progress_holo_light" android:thumb="@drawable/sb_ball" android:paddingStart="8.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:paddingEnd="12.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mirrors_four" />
            <TextView android:id="@id/mirrors_four_range" android:layout_width="25.0dip" android:layout_height="wrap_content" />
            <SeekBar android:id="@id/mirrors_four_range_seek_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="40" android:progress="0" android:progressDrawable="@drawable/progress_holo_light" android:thumb="@drawable/sb_ball" android:paddingStart="8.0dip" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/gun_setup_tip1" />
        <TextView android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_reset" android:background="@color/shape_color" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="1.0dip" android:layout_height="wrap_content" android:text="@string/reset_gun_parm" android:layout_weight="3.0" />
            <TextView android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_save" android:background="@color/shape_color" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="1.0dip" android:layout_height="wrap_content" android:text="@string/save_gun_parm" android:layout_weight="3.0" />
            <TextView android:visibility="gone" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_finish_setup" android:background="@color/shape_color" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="wrap_content" android:text="@string/finish_setup" android:layout_weight="3.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>