<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="256.0dip" android:layout_height="35.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_sync" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/new_setup_dialog_tip18" android:maxLines="1" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:background="@color/white" android:layout_width="256.0dip" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_message" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="250.0dip" android:text="@string/new_setup_dialog_tip21" />
        <TextView android:background="@color/white" android:layout_width="256.0dip" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="256.0dip" android:layout_height="35.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancle" android:layout_weight="1.0" />
            <TextView android:background="@color/white" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_sure" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sure" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>