<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/dialog_message" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:maxWidth="200.0dip" android:text="@string/save_dialog_tip1" />
        <LinearLayout android:orientation="horizontal" android:layout_width="256.0dip" android:layout_height="45.0dip">
            <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/dialog_btn_cancel" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancle" android:layout_weight="1.0" />
            <TextView android:layout_gravity="center_vertical" android:background="@color/white" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/dialog_btn_sure" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sure" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>